--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Yonatan Perez</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-  <script src="./react/dist/bundle.js"></script>
+	<head>
+		<meta charset="utf-8">
+		<title>Enjoy</title>
+	</head>
+	<body>
+		<a href="./brewkrew/index.html">Brew Krew</a>
+	</body>
 </html>
