--- a/brewkrew/index.html
+++ b/brewkrew/index.html
@@ -5,10 +5,11 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="./dest/main.css">
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTwGRSfyvfOUMH84GTW-i0werk9UHSOF0"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTwGRSfyvfOUMH84GTW-i0werk9UHSOF0"></script>
 		<script src="dest/build.js"></script>
   </head>
   <body>
-	<div id="map"></div>
+		<div id="root"></div>
   </body>
 </html>
