--- a/brewkrew/index.html
+++ b/brewkrew/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-		<title>Styled Map Types</title>
+		<title>Brew Krew</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="./dest/main.css">
