Redirect brewkrew to new domain

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Enjoy</title>
 	</head>
 	<body>
-		<a href="./brewkrew/dist/index.html">Brew Krew</a>
+		<a href="https://brewkrew.io">Brew Krew</a>
 	</body>
 </html>
